samples/_failures_safe/1761178396_69e949_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0715481c.c: In function ‘main’:
./samples/SAFE/__tmp_0715481c.c:140:29: error: expected ‘]’ at end of input
  140 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_0715481c.c:140:5: error: expected declaration or statement at end of input
  140 |     if (len > 0 && input[len
      |     ^~
